--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
       <section>
         <div class="question-container"> 
           <p class="question">What is Frontend Mentor, and how will it help me?</p>
-          <img class="close" src="/assets/images/icon-minus.svg" alt="Minus Icon">
-          <img class="open" src="/assets/images/icon-plus.svg" alt="Plus Icon">
+          <img class="close" src="./assets/images/icon-minus.svg" alt="Minus Icon">
+          <img class="open" src="./assets/images/icon-plus.svg" alt="Plus Icon">
         </div>
         <div class="close" class="answer-container">
           <p>
@@ -148,8 +148,8 @@
       <section>
         <div class="question-container"> 
           <p class="question">Is Frontend Mentor free?</p>
-          <img class="close" src="/assets/images/icon-minus.svg" alt="Minus Icon">
-          <img class="open" src="/assets/images/icon-plus.svg" alt="Plus Icon">
+          <img class="close" src="./assets/images/icon-minus.svg" alt="Minus Icon">
+          <img class="open" src="./assets/images/icon-plus.svg" alt="Plus Icon">
         </div>
         <div class="close" class="answer-container">
           <p>
@@ -160,8 +160,8 @@
       <section>
         <div class="question-container"> 
           <p class="question">Can I use Frontend Mentor projects in my portfolio?</p>
-          <img class="close" src="/assets/images/icon-minus.svg" alt="Minus Icon">
-          <img class="open" src="/assets/images/icon-plus.svg" alt="Plus Icon">
+          <img class="close" src="./assets/images/icon-minus.svg" alt="Minus Icon">
+          <img class="open" src="./assets/images/icon-plus.svg" alt="Plus Icon">
         </div>
         <div class="close" class="answer-container">
           <p>
@@ -172,8 +172,8 @@
       <section>
         <div class="question-container"> 
           <p class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
-          <img class="close" src="/assets/images/icon-minus.svg" alt="Minus Icon">
-          <img class="open" src="/assets/images/icon-plus.svg" alt="Plus Icon">
+          <img class="close" src="./assets/images/icon-minus.svg" alt="Minus Icon">
+          <img class="open" src="./assets/images/icon-plus.svg" alt="Plus Icon">
         </div>
         <div class="close" class="answer-container">
           <p>
